# rust-harfbuzz

./: Cargo.toml
.github/workflows/: main.yml
harfbuzz/: Cargo.toml
harfbuzz-sys/: Cargo.toml  build.rs  update.sh
harfbuzz-sys-test/: build.rs
harfbuzz-sys/harfbuzz/: Makefile.in  configure
harfbuzz-sys/harfbuzz/docs/html/: api-index-2-9-0.html  api-index-2-9-1.html  api-index-full.html  deprecated-api-index.html  harfbuzz-hb-buffer.html  harfbuzz-hb-directwrite.html  harfbuzz-hb-ot-layout.html  harfbuzz-hb-ot-name.html  harfbuzz-hb-set.html  harfbuzz-hb-subset.html  harfbuzz-hb-version.html  harfbuzz.devhelp2  index.html  reference-manual.html  subset-api.html
harfbuzz-sys/harfbuzz/src/: Makefile.in
harfbuzz-sys/harfbuzz/test/api/: Makefile.in
harfbuzz-sys/harfbuzz/test/subset/data/: Makefile.in
harfbuzz-sys/harfbuzz/test/subset/data/repack_tests/: Makefile.in
harfbuzz-sys/src/: bindings.rs  coretext.rs  lib.rs
harfbuzz/src/: blob.rs  buffer.rs  direction.rs  errors.rs  face.rs  feature.rs  font.rs  font_extents.rs  language.rs  lib.rs  tag.rs  user_data.rs
systest/: Cargo.toml
systest/src/: main.rs
