[package]
name = "songww-harfbuzz-sys"
version = "0.1.0"

authors = ["The Servo Project Developers"]
license = "MIT"

description = "Rust bindings to the HarfBuzz text shaping engine"
repository = "https://github.com/songww/rust-harfbuzz"
documentation = "https://docs.rs/songww-harfbuzz-sys/"
keywords = ["opentype", "font", "text", "layout", "unicode"]
categories = ["external-ffi-bindings", "internationalization"]

exclude = [
    "harfbuzz/test/subset/data/fonts/*",
    "harfbuzz/test/fuzzing/fonts/*",
    "harfbuzz/test/shaping/data/text-rendering-tests/fonts/*",
    "harfbuzz/test/shaping/data/aots/fonts/*",
    "harfbuzz/test/shaping/data/in-house/fonts/*",
]

links = "harfbuzz"

[lib]
name = "harfbuzz_sys"

[build-dependencies]
cc = { version = "1", optional = true }
regex = { version = "1", optional = true }
bindgen_ = { version = "0.60", optional = true, package = "bindgen" }
pkg-config = "0.3"

[target.'cfg(target_vendor = "apple")'.dependencies]
core-graphics = "0.22"
core-text = "19"
foreign-types = "0.3"

[target.'cfg(any(target_os = "android", all(unix, not(target_vendor = "apple"))))'.dependencies]
freetype-sys = { version = "0.15", default-features = false }

[features]
default = ["vendored"]
bindgen = ["bindgen_", "regex"]
vendored = ["cc"]
