[package]
name = "songww-harfbuzz-sys"
version = "0.3.0"
edition = "2021"

authors = ["The Servo Project Developers"]
license = "MIT"

description = "Rust bindings to the HarfBuzz text shaping engine"
repository = "https://github.com/songww/rust-harfbuzz"
documentation = "https://docs.rs/songww-harfbuzz-sys/"
keywords = ["opentype", "font", "text", "layout", "unicode"]
categories = ["external-ffi-bindings", "internationalization"]

exclude = [
    "harfbuzz/NEWS",
    "harfbuzz/perf/*",
    "harfbuzz/util/*.h",
    "harfbuzz/util/*.hh",
    "harfbuzz/util/*.c",
    "harfbuzz/util/*.cc",
    "harfbuzz/docs/*",
    "harfbuzz/test/*",
    "harfbuzz/test/api/fonts/*",
    "harfbuzz/test/subset/data/fonts/*",
    "harfbuzz/test/fuzzing/fonts/*",
    "harfbuzz/test/shape/data/text-rendering-tests/fonts/*",
    "harfbuzz/test/shape/data/aots/fonts/*",
    "harfbuzz/test/shape/data/in-house/fonts/*",
    "harfbuzz/.git",
]

links = "harfbuzz"

[lib]
name = "harfbuzz_sys"

[build-dependencies]
cc = { version = "1", optional = true }
which = { version = '4.2' }
regex = { version = "1", optional = true }
bindgen_ = { version = "0.60", optional = true, package = "bindgen" }
cfg-if = "1"
pkg-config = "0.3"

[target.'cfg(target_vendor = "apple")'.dependencies]
core-graphics = "0.22"
core-text = "19"
foreign-types = "0.3"

[target.'cfg(any(target_os = "android", all(unix, not(target_vendor = "apple"))))'.dependencies]
freetype-sys = { version = "0.15", default-features = false }

[features]
default = ["v2_2"]

v2_2 = []
v2_5_3 = ["v2_2"]
v2_6_8 = ["v2_5_3"]
v2_7_4 = ["v2_6_8"]
v2_8_2 = ["v2_7_4"]
v2_9 = ["v2_8_2"]
v3_0 = ["v2_9"]
v3_1 = ["v3_0"]
v3_2 = ["v3_1"]
v3_3 = ["v3_2"]
v3_4 = ["v3_3"]
v4_0 = ["v3_4"]
v4_1 = ["v4_0"]
v4_2 = ["v4_1"]
v4_3 = ["v4_2"]
v4_4 = ["v4_3"]
dox = ["v4_4"]

bindgen = ["bindgen_", "regex"]
vendored = ["cc"]
