[package]
name = "harfbuzz"
version = "0.4.0"
edition = "2021"
authors = ["The Servo Project Developers"]
license = "MIT / Apache-2.0"

description = "Rust bindings to the HarfBuzz text shaping engine"
repository = "https://github.com/servo/rust-harfbuzz"
documentation = "https://docs.rs/harfbuzz/"
keywords = ["opentype", "font", "text", "layout", "unicode"]

[dependencies]
bitflags = "1.3"
thiserror = "1.0"

[dependencies.harfbuzz-sys]
path = "../harfbuzz-sys"
version = "0.5.0"
default-features = false

[features]
default = ["vendored"]
bindgen = ["harfbuzz-sys/bindgen"]
vendored = ["harfbuzz-sys/vendored"]
